--- a/css/app.css
+++ b/css/app.css
@@ -1,60 +1,115 @@
-.grid-container{
-
-   
-
+.callout.primary {
+background-color: transparent !important;
 }
 
-
-.grid-x{
-
-    
-
+.callout {
+    border: none !important;
 }
 
-.cell{
-
-    /* background: greenyellow; */
-
+/* 共通 */
+.sec_ttl{
+    text-align: center;
+    color: #7BBDE7;
 }
 
-.test_01 p{
-
-    background: yellow;
-
-}
-
-.test_02_01{
-
-    background: palevioletred;
-    
-}
-
-.test_02_02{
-
-    background: red;
-    
-}
-
-.test_03_01{
-
-    background: orange;
-
-}
-
-.test_03_02{
-
-    background: olive;
-    
-}
-
-.test_03_03{
-
-    background: purple;
-    
-}
 
 .mv{
 
-    background: url(../img/mv_voice.jpg)  !important;
+    background: url(../img/mv_pc.jpg)  !important;
+    background-position: center left;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
     height: 53vw;
+    position: relative;
 }
+
+.mv .grid-x{
+    background: skyblue;
+    width: 73%;
+    position: absolute;
+    right: 80px;
+    bottom: -200px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.mv .primary p{
+    background: #fff;
+}
+
+
+.disk{
+    background: url(../img/desk_back.jpg)  !important;
+    padding-top: 193px;
+
+}
+
+.disk .grid-x{
+    background-color: skyblue;
+    padding-top: 74px;
+
+}
+
+.disk h3{
+    color: #7BBDE7;
+    font-size: 36px;
+}
+
+.disk h4{
+    color: #000;
+    font-size: 24px;
+    padding-top: 31px;
+}
+
+.disk p{
+    font-size: 18px;
+    padding-top: 13px;
+}
+
+.cta_btn{
+    background-color: yellow;
+    padding-top: 80px;
+}
+
+.chigai{
+    background: pink;
+    padding-top: 64px;
+}
+
+.merit{
+    background-color: yellow;
+    padding-top: 193px;
+}
+
+
+
+.merit h2 {
+    font-size: 48px;
+}
+
+
+.life{
+    background-color: pink;
+    padding-top: 151px;
+}
+
+
+.customer{
+    background-color: yellow;
+    padding-top: 226px;
+}
+
+
+.faq{
+    background-color: pink;
+    padding-top: 126px;
+}
+
+
+.insta{
+    background-color: yellow;
+    padding-top: 78px;
+}
+
+
