--- a/css/app.css
+++ b/css/app.css
@@ -274,6 +274,7 @@ background-color: transparent !important;
     color: #7BBDE7;
     font-size: 200px;
     position: relative;
+    font-family: "Zen Old Mincho", serif;
 }
 
 .merit1__img__1{
@@ -294,6 +295,17 @@ background-color: transparent !important;
     padding-top: 25px;
     text-align: center;
 }
+
+.graph__img{
+    text-align: center;
+}
+
+
+.graph__img img{
+    width: 80%;
+}
+
+
 
 .merit2__title:before{
     content: "メリット";
@@ -322,6 +334,7 @@ background-color: transparent !important;
     color: #7BBDE7;
     font-size: 200px;
     position: relative;
+    font-family: "Zen Old Mincho", serif;
 }
 
 .merit2__img{
@@ -337,7 +350,7 @@ background-color: transparent !important;
     color: #7BBDE7;
     font-size: 200px;
     position: relative;
-
+    font-family: "Zen Old Mincho", serif;
 }
 
 .merit3__title:before{
@@ -371,6 +384,35 @@ background-color: transparent !important;
     text-align: center;
 }
 
+.life .grid-x {
+    border-radius: 50px;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    margin-top: 45px;
+}
+
+/* .life .grid-x:not(:first-child){
+    margin-top: 45px;
+} */
+
+.life__desk {
+    border-left: 1px #000 solid;
+    border-right: 1px #000 solid;
+display: inline-block;
+padding: 0 27px;
+text-align: center;
+}
+
+.life .grid-x:nth-of-type(1){
+    background-color: #D3CAA3;
+}
+
+.life .grid-x:nth-of-type(2){
+background-color: #BBDCDC;
+}
+
+.life .grid-x:nth-of-type(3){
+background-color: #F0D6CB;
+}
 
 .customer p{
     text-align: center;
@@ -421,3 +463,9 @@ background-color: transparent !important;
     width: 200px;
   }
 
+  /* .zen-old-mincho-regular {
+    
+    font-weight: 400;
+    font-style: normal;
+  } */
+  
