--- a/css/app.css
+++ b/css/app.css
@@ -70,6 +70,10 @@ background-color: transparent !important;
 
 }
 
+.mv_subtitle{
+    font-size: 24px;
+}
+
 .mv p{
     font-family: "Zen Old Mincho", serif;
 
@@ -173,6 +177,7 @@ background-color: transparent !important;
 .life .life__txt1{
     font-size: 48px;
     color: #C9BE90;
+
 }
 
 .life .life__txt2{
@@ -198,6 +203,11 @@ background-color: transparent !important;
 .life__desk {
     font-size: 24px !important;
 }
+
+/* .primary .callout1{
+    position: relative;
+
+} */
 
 
 .customer{
@@ -457,12 +467,39 @@ background-color: transparent !important;
     margin-top: 45px;
 } */
 
+  /* life */
+  .life{
+
+  }
+
 .life__desk {
     border-left: 1px #000 solid;
     border-right: 1px #000 solid;
 display: inline-block;
 padding: 0 27px;
 text-align: center;
+}
+
+.life__item{
+
+}
+
+.life__img{
+
+}
+
+.life__txt{
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+.life__txt .primary{
+}
+
+.life__ttl{
+    display: flex;
+    justify-content: center;
 }
 
 .life .grid-x:nth-of-type(1){
@@ -476,6 +513,7 @@ background-color: #BBDCDC;
 .life .grid-x:nth-of-type(3){
 background-color: #F0D6CB;
 }
+
 
 
 .customer p{
@@ -556,3 +594,19 @@ background-color: #F0D6CB;
     background-color: #A1E0FF;
     box-shadow: 0px 4px 4px 0px #00000040;
   }
+
+  /* スワイパー */
+  .swiper-slide img {
+    height: auto;
+    width: 100%;
+  }
+
+
+
+
+
+
+
+  /* .primary.callout2 {
+    background: pink;
+} */
