--- a/css/voice.css
+++ b/css/voice.css
@@ -22,7 +22,7 @@ a {
 
 .mv {
 
-    background: url(../img/mv_pc.jpg) !important;
+    background: url(../img/mv_voice.jpg) !important;
     background-position: center left;
     background-size: cover !important;
     background-repeat: no-repeat !important;
