--- a/css/app.css
+++ b/css/app.css
@@ -718,3 +718,11 @@ ul.accordion {
 .accordion {
     padding-top: 44px;
 }
+
+.cta_btn{
+    padding-top: 138px;
+}
+
+.button-container{
+    padding-bottom: 138px;
+}
