--- a/css/voice.css
+++ b/css/voice.css
@@ -174,7 +174,6 @@ a {
 
 .chigai {
     padding: 64px 0 41px;
-    background-color: #F8FCFF;
 }
 
 .chigai .grid-x {}
@@ -388,6 +387,14 @@ img.chigai_img_02 {
 .cta_btn .callout {
     margin: 0 0 1rem;
     padding: 2rem;
+}
+
+.cta_btn{
+    padding-top: 138px;
+}
+
+.button-container{
+    padding-bottom: 138px;
 }
 
 .chigai h2 {
@@ -718,3 +725,29 @@ ul.accordion {
 .accordion {
     padding-top: 44px;
 }
+
+h2.voice__ttl{
+    font-size: 32px;
+    font-family: "Zen Old Mincho", serif !important;
+    padding-top: 34px;
+}
+
+p.voice__txt{
+    font-size: 21px;
+}
+
+.voice {
+    background: url(../img/desk_back.jpg) !important;
+
+}
+
+
+.grid-x:first-child{
+    padding-top: 166px !important;
+ 
+}
+
+img.voice_icn {
+    width: 81px;
+    height: 85px;
+}  
