--- a/css/app.css
+++ b/css/app.css
@@ -19,6 +19,10 @@ a {
     color: inherit !important;
 }
 
+h2{
+    font-size: 64px;
+}
+
 
 .mv {
 
@@ -34,6 +38,9 @@ a {
 
 .top-bar {
     background-color: rgba(1, 1, 1, 0.09) !important;
+    position: fixed; /* ヘッダーを固定 */
+    width: 100%;
+    z-index: 100; /* 他の要素よりも前面に表示 */
 }
 
 .top-bar ul {
@@ -43,6 +50,7 @@ a {
 .top-bar-right .menu {
     color: #fff !important;
     font-weight: bold;
+    font-size: 1.4em;
 }
 
 
@@ -58,15 +66,16 @@ a {
     justify-content: space-around;
 }
 
-.mv .primary p {
+.mv .primary p,.mv .primary h1 {
     background: #fff;
 }
 
 .mv_title {
     color: #78BAE2;
-    font-size: 42px;
+    font-size: 64px;
     font-family: "Zen Old Mincho", serif;
-    display: inline-block;
+    width: fit-content;
+
 
 }
 
@@ -77,6 +86,22 @@ a {
 
 .mv p {
     font-family: "Zen Old Mincho", serif;
+
+}
+
+.top_btn{
+right: 0;
+height: 148px;
+
+}
+.top_btn img{
+    position: fixed;
+    width: 148px;
+    bottom: 10em;
+}
+
+.server_img{
+    left: -60%;
 
 }
 
@@ -215,8 +240,6 @@ a {
 }
 
 .large-12 .medium-6 .cell .chigai__txt {
-    position: relative;
-    /* 相対位置指定 */
     width: 300px;
     /* コンテナの幅 */
     height: 200px;
@@ -269,6 +292,43 @@ img.chigai_img_02 {
     z-index: -1;
 }
 
+.primary.callout.merit1__img__1 {
+    height: auto;
+    width: 725px;
+    position: relative;
+    right: -50%;
+}
+
+.primary.callout.merit1__img__2 {
+    height: auto;
+    width: 725px;
+    position: relative;
+    left: -50%;
+
+}
+
+.primary.callout.merit1__img__3 {
+    height: auto;
+    width: 725px;
+    position: relative;
+    right: -50%;
+
+}
+
+.primary.callout.merit1__img__4 {
+    height: auto;
+    width: 725px;
+    position: relative;
+    left: -50%;
+
+}
+
+.txt_center{
+    display: flex;
+    align-items: center;
+}
+
+
 
 .merit h2 {
     font-size: 48px;
@@ -320,8 +380,7 @@ img.chigai_img_02 {
 .customer {
     padding-top: 226px;
     background: #F8FCFF;
-
-
+    box-shadow: 0px 4px 4px 0px #00000040;
 }
 
 .customer h2 {
@@ -369,7 +428,11 @@ img.chigai_img_02 {
     background-color: #79CFCF;
     color: #fff!important;
     margin-bottom: 0;
+    text-align: center;
 }
+
+
+
 .accordion-title{
     padding: 0!important;
 }
@@ -408,9 +471,6 @@ img.chigai_img_02 {
     font-family: "Noto Sans JP", sans-serif !important;
 }
 
-.chigai img {
-    padding-top: 72px;
-}
 
 .tigai__txt2 {
     background-color: #E6F7FF;
@@ -423,6 +483,9 @@ img.chigai_img_02 {
     color: #0087CC;
 }
 
+.chigai_img{
+    border-radius: 20px;
+}
 
 
 
@@ -497,7 +560,7 @@ img.chigai_img_02 {
     margin-bottom: 12px;
 }
 
-.merit2__title:after {
+/* .merit2__title:after {
     content: "";
     display: block;
     margin-bottom: 12px;
@@ -508,9 +571,20 @@ img.chigai_img_02 {
     top: 50%;
     left: -10px;
     transform: translate(0, -50%);
+} */
+
+.merit2__title:after {
+    content: "";
+    display: block;
+    margin-bottom: 12px;
+    border-right: 1px solid #7BBDE7;
+    width: 10px;
+    height: 251px;
+    position: absolute;
+    top: 50%;
+    left: 276px;
+    transform: translate(0, -50%);
 }
-
-
 
 .merit2__title {
     padding-top: 117px;
@@ -520,9 +594,30 @@ img.chigai_img_02 {
     font-family: "Zen Old Mincho", serif;
 }
 
-.merit2__img {
-    padding-top: 253px !important;
+.merit_af{
+    padding-bottom: 60px;
 }
+
+.merit_kitchen{
+
+    padding-top: 100px;
+}
+
+.primary.callout.merit2__img {
+    height: 425px;
+    width: 725px;
+    position: relative;
+    left: -50%;
+}
+
+/* .merit2__img {
+    padding-top: 253px !important;
+} */
+
+/* .merit_af{
+
+    align-items: center;
+} */
 
 .merit2__txt {
     padding-top: 104px;
@@ -530,6 +625,10 @@ img.chigai_img_02 {
     font-size: 36px;
     font-family: "Zen Old Mincho", serif;
 
+}
+
+h3.merit2__title {
+    right: -835px;
 }
 
 .merit3__title {
@@ -615,7 +714,11 @@ img.chigai_img_02 {
     background-color: rgba(211, 202, 163, 0.15);}
 
 .life .grid-x:nth-of-type(2) {
-    background-color: rgba(187, 220, 220, 0.15);}
+    background-color: rgba(187, 220, 220, 0.15);
+    margin: auto;
+    margin-right: 0;
+    margin-top: 45px;
+}
 
 .life .grid-x:nth-of-type(3) {
     background-color: rgba(240, 214, 203, 0.15);
@@ -625,6 +728,10 @@ img.chigai_img_02 {
 
 .customer p {
     text-align: center;
+}
+
+.customer_ttl{
+    padding-top: 50px;
 }
 
 
@@ -727,10 +834,17 @@ ul.accordion {
     padding-top: 44px;
 }
 
-.cta_btn{
-    padding-top: 138px;
-}
 
 .button-container{
     padding-bottom: 138px;
+}
+
+.accordion-title{
+    border: 1px solid #79CFCF;
+}
+
+.accordion-content{
+
+    border: 1px solid #7BBDE7;
+
 }
