--- a/css/app.css
+++ b/css/app.css
@@ -304,6 +304,8 @@ img.chigai_img_02 {
     width: 725px;
     position: relative;
     left: -50%;
+    /* text-align: center;
+    line-height: 200px; */
 
 }
 
