--- a/css/voice.css
+++ b/css/voice.css
@@ -499,7 +499,7 @@ img.chigai_img_02 {
     font-size: 36px;
 }
 
-.merit1__graph {
+.accordion {
     text-align: center;
     padding-top: 108px;
     color: #7BBDE7;
@@ -512,6 +512,7 @@ img.chigai_img_02 {
     text-align: center;
     font-family: "Zen Old Mincho", serif;
     font-size: 24px;
+    color: #000;
 }
 
 .graph__img {
